--- a/Menu/style.css
+++ b/Menu/style.css
@@ -187,3 +187,12 @@ nav #close {
   color: white;
 }
 
+@media (max-width: 768px) {
+  h1 {
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+}
