--- a/style.css
+++ b/style.css
@@ -439,3 +439,13 @@ nav #close {
     text-align: center;
   }
 }
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+}
