--- a/style.css
+++ b/style.css
@@ -441,11 +441,7 @@ nav #close {
 }
 
 @media (max-width: 768px) {
-  h1 {
-    font-size: 24px;
-  }
-
-  p {
-    font-size: 18px;
+  * {
+    margin: auto;
   }
 }
